--- a/src/components/pages/base-page/BasePage.css
+++ b/src/components/pages/base-page/BasePage.css
@@ -1,5 +1,11 @@
 .App {
   text-align: center;
+  max-width: 50rem;
+  margin: 0 auto;
+}
+
+.App p, .App li {
+  text-align: left;
 }
 
 .App-logo {
