--- a/src/components/pages/web-design-page/subpages/task-two-subpage/TaskTwoSubpage.css
+++ b/src/components/pages/web-design-page/subpages/task-two-subpage/TaskTwoSubpage.css
@@ -4,5 +4,14 @@ ol {
 }
 
 ol li {
-    margin-right: 1.1rem;
+    margin-left: 1.1rem;
+}
+
+.listItemTitle {
+    font-weight: bold;
+}
+
+.planningImage {
+    width: 100%;
+    display: block;
 }
