--- a/src/components/pages/web-design-page/WebDesignPage.css
+++ b/src/components/pages/web-design-page/WebDesignPage.css
@@ -4,3 +4,9 @@
     max-width: 1200px;
     margin: 0 auto;
 }
+
+.webDesignPage .externalLink {
+    color: #404545;
+    text-decoration: none;
+    border-bottom: 1px solid #404545;
+}
